--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <img>
     <title>JS Game</title>
 </head>
 
 <body>
     <div class="container">
         <div class="container__conteudo">
-            <img src="./img/robot.png" alt="robô mergulhador" class="container__imagem-robo"/>
+            <img src="robot.png" alt="robô mergulhador" class="container__imagem-robo"/>
             <div class="container__informacoes">
-                <img src="./img/trophy.png" alt="ícone de um troféu" />
+                <img src="trophy.png" alt="ícone de um troféu" />
                  <div class="container__texto">
                     <h1>Você <span class="container__texto-azul">acertou!</span></h1>
                     <h2>Você descobriu o número secreto!</h2>
