--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <img>
+    <img src="./imagens/robot.png" alt="robô mergulhador" class="container__imagem-robo"></>
     <title>JS Game</title>
 </head>
 
