--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,14 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <img src="./imagens/robot.png" alt="robô mergulhador" class="container__imagem-robo"></>
     <title>JS Game</title>
 </head>
 
 <body>
     <div class="container">
         <div class="container__conteudo">
-            <img src="./imagens/robot.png" alt="robô mergulhador" class="container__imagem-robo"/>
+            <img src="./imagens/robot.png" alt="robô mergulhador" class="container__imagem-robo" />
             <div class="container__informacoes">
                 <img src="./imagens/trophy.png" alt="ícone de um troféu" />
                  <div class="container__texto">
